[project]
name = "workspace"
version = "0.1.0"
description = ""
authors = [
    {name = "a1528zhang",email = "beingszhang@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pix2text (>=1.1.3.2,<2.0.0.0)",
    "sympy (>=1.14.0,<2.0.0)",
    "antlr4-python3-runtime (==4.11)",
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
